# tlssysloghandler

./: LICENSE  Pipfile  README.rst  pyproject.toml
.github/workflows/: auto-tag.yml  publish-pypi.yml  pytest.yml  test-python.yml
src/tlssysloghandler/: __init__.py  handler.py
tests/: test_regress_basic.py  test_regress_syslogng.py  test_util.py
