[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tlssysloghandler"
version = "1.0.3"
description = "SysLogHandler with TLS"
readme = "README.rst"
license = {text = "ISC"}
keywords = ["handler", "logging", "logger", "syslog", "tls"]
requires-python = ">= 3.11"
authors = [
  {name = "A Tammy", email = "atammy@bsd.ac"},
  {name = "Craig Weber", email = "crgwbr@gmail.com"},
]
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/bsd-ac/tlssysloghandler"
License = "https://github.com/bsd-ac/tlssysloghandler/blob/main/LICENSE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
